nouveau scindage de rapport

--- a/mini_projets/electronique_lineaire_15A/2.tex
+++ b/mini_projets/electronique_lineaire_15A/2.tex
@@ -1,501 +1,4 @@
  \chapter{Études théorique des différents composants}
-  \section{Collecteur Commun}
-   \subsection{Schéma}
-
-   On utilisera le schéma suivant de collecteur commun :
-
-    \begin{circuitikz} \draw
-     (0,3) to[open,v=$V_E$] (0,-2)
-     (6,0) to[open,v=$V_S$] (6,-2)
-     (0,-2) -- (6,-2)
-     (0,3) to[C=$C_i$,i=$I_E$] (2,3)
-      to [R=$R_{B1}$] (2,6) -- (4,6)
-      to [R=$R_C$] (4,4)
-     (4,3) node[npn](npn){}
-      (npn.B) -- (2,3)
-      (npn.C) -- (4,4)
-      (npn.E) -- (4,2)
-     (2,3) to [R=$R_{B2}$] (2,-2) -- (4,-2)
-      to [R=$R_{E2}$] (4,0)
-      to [R=$R_{E1}$] (4,2)
-     (4,0) to [C=$C_o$,i=$I_S$] (6,0)
-     (1,6) node[anchor=east] {$V_{cc}$} to [short,o-] (2,6)
-     ;
-    \end{circuitikz}
-
-   \subsection{Polarisation}
-    En raison de la présence des condensateurs, ce circuit est équivalent à (en continu) :
-
-    \begin{circuitikz} \draw
-        (3,2) to [R=$R_{E1}$] (3,0) 
-      to [R=$R_{E2}$] (3,-2) -- (0,-2)
-      to [battery=$E_{th}$] (0,3)
-      to [R=$R_B$] (2,3)
-     (2,6) node[anchor=east] {$V_{cc}$} to [short,o-] (3,6)
-      to [R=$R_C$] (3,4)
-     (3,3) node[npn](npn){}
-      (npn.B) -- (2,3)
-      (npn.C) -- (3,4)
-      (npn.E) -- (3,2)
-     ;
-    \end{circuitikz}
-
-    On a alors les relations suivantes :
-
-    $\left.
-      \begin{array}{c}
-       R_B = \cfrac{R_{B1} R_{B2}}{R_{B1} + R_{B2}} \\
-       E_{th} = \cfrac{V_{cc}}{1+\cfrac{R_{B1}}{ R_{B2}}} \\
-       R_E I_C + V_{BE} + R_B I_B = E_{th} \\
-       I_C = \beta I_B
-      \end{array}
-    \right\} \Rightarrow I_C = \cfrac{E_{th} - V_{BE}}{R_E + \cfrac{R_B}{\beta}}$
-
-   \subsection{Droite de charge statique}
-
-    Afin de limiter les effets de distorsion, on s'efforcera de placer le point de polarisation Q au milieu de la droite de charge statique.
-    
-    $V_{cc} = R_C I_C + V_{CE} + R_E I_C$
-
-    $I_C = \cfrac{V_{cc} - V_{CE}}{R_E+R_C}$
-
-    \begin{circuitikz}
-     \begin{scope}[xshift=6.5cm, yshift=.5cm]
-      \draw [->] (0,0) -- (4.5,0) node[anchor=west] {$V_{CE} $};
-      \draw [->] (0,0) -- (0,2.5) node[anchor=west] {$I_C$} ;
-      \draw (2,0) node[anchor=north] {$\cfrac{V_{cc}}{2}$}
-            (4,0) node[anchor=north] {$V_{cc}$}
-            (0,1) node[anchor=east] {$\cfrac{V_{cc}}{2(R_E+R_C)}$}
-            (0,2) node[anchor=east] {$\cfrac{V_{cc}}{R_E+R_C}$}
-            (0,0) node[anchor=north] {0};
-      \draw [thick] (0,2) -- (4,0);
-      \draw [dotted] (0,1) -- (2,1) -- (2,0);
-     \end{scope}
-    \end{circuitikz}
-
-   \subsection{Schéma équivalent petit signal}
-    Aux fréquences moyennes et en comportement petit signal, on obtient le schéma équivalent suivant :
-
-    \begin{circuitikz} \draw
-     (0,4) to[open,v=$V_E$] (0,-2) -- (11,-2)
-     (11,0) to[open,v=$V_S$] (11,-2)
-     (0,4) to [short,i=$I_E$] (1,4) --(5,4)
-      to [R=$r_b$,v=v] (5,2) -- (9,2)
-     (1,-2) to [R=$R_{B1}$] (1,4)
-     (3,-2) to [R=$R_{B2}$] (3,4)
-     (9,-2) to [R=$R_{E2}$] (9,0)
-     (9,0) to [R=$R_{E1}$] (9,2)
-     (7,-2) to [cI=$g_mv$] (7,2)
-     (9,0) to [short,i=$I_S$] (11,0)
-     ;
-    \end{circuitikz}
-
-    $g_m = \cfrac{I_C}{U_T}$
-
-    $r_b = \cfrac{\beta}{g_m}$
-
-   \subsection{Droite de charge dynamique}
-
-    $\cfrac{V_{CE}(t)}{I_C(t)} = - R_E \parallel Z_L$
-
-    \begin{circuitikz}
-    \begin{scope}[xshift=6.5cm, yshift=.5cm]
-     \draw [->] (0,0) -- (4.5,0) node[anchor=west] {$V_{CE}(t) $};
-     \draw [->] (0,0) -- (0,2.5) node[anchor=west] {$I_C(t)$} ;
-     \draw (3,0) node[anchor=north] {$V_{CE_Q}$}
-           (4,0) node[anchor=north] {$V_{CE_{max}}$}
-           (0,0.5) node[anchor=east] {$I_{C_Q}$}
-           (0,2) node[anchor=east] {$I_{C_{max}}$}
-           (0,0) node[anchor=north] {0};
-     \draw [thick] (0,2) -- (4,0);
-     \draw [dotted] (0,0.5) -- (3,0.5) -- (3,0);
-    \end{scope}
-    \end{circuitikz}
-
-    Donc dynamique de sortie maximale (crête à crête) = $2(V_{CEmax}-V_{CEQ}) = 2 I_{CQ} (R_E \parallel Z_L)$ car $V_S = -V_{CE}$
-
-   \subsection{Impédance d'entrée}
-
-    $\left.
-     \begin{array}{c}
-      Z_E = \cfrac{V_E}{I_E}\\
-      V_E = v + V_S \\
-      v = r_b i \\
-      V_S = (R_E \parallel Z_L)(i+g_mv)
-     \end{array}
-    \right\} 
-    \begin{array}{l}
-     \Rightarrow \cfrac{V_E}{i}=\cfrac{v+V_S}{i} =r_b + (R_E\parallel Z_L)(1+g_mr_b) \\
-     \Rightarrow Z_E = R_B \parallel \left ( r_b + \beta (R_E\parallel Z_L) \right )
-    \end{array}$
-
-   \subsection{Impédance de sortie}
-
-    $Z_S = R_{E2} \parallel \left(R_{E1}+\cfrac{r_b + R_g \parallel R_B}{\beta}\right)$
-
-   \subsection{Gain}
-
-    $a_v = \cfrac{V_S}{V_E} = \cfrac{V_S}{v+V_S} = \cfrac{\beta(R_E \parallel Z_L)}{r_b+\beta(R_E\parallel Z_L)} \approx 1$
-
-    ~
-
-    On considérera donc le gain de cet étage comme égal à 1.
-
-   \subsection{Comportement en fréquence}
-    «À vue», l’influence de $C_i$ intervient dans la fonction de transfert
-    
-    $H = \cfrac{Z_E}{Z_E+R_g}\cdot\cfrac{(Z_E+R_g)C_ip}{1+(Z_E+R_g)C_ip}$, 
-
-    donc $f_{CBF1} = \cfrac{1}{2\pi(Z_E+R_g)C_i}$
-
-    On étudie l’influence de $C_o$ de la même manière:
-
-    $H = \cfrac{Z_L}{Z_L+Z_S}\cdot\cfrac{(Z_L+Z_S)C_ip}{1+(Z_L+Z_S)C_ip}$, 
-
-    donc $f_{CBF2} = \cfrac{1}{2\pi(Z_L+Z_S)C_i}$
-
-  \section{Émetteur Commun Dégénéré}
-   \subsection{Schéma}
-    On utilisera le montage émetteur commun suivant :
-
-    \begin{circuitikz} \draw
-     (0,3) to[open,v=$V_E$] (0,-2)
-     (7,4) to[open,v=$V_S$] (7,-2)
-     (0,-2) -- (7,-2)
-     (0,3) to[C=$C_i$,i=$I_E$] (2,3)
-      to [R=$R_{B1}$] (2,6) -- (4,6)
-      to [R=$R_C$] (4,4)
-      to [C=$C_o$,i=$I_S$] (7,4) 
-     (4,3) node[npn](npn){}
-      (npn.B) -- (2,3)
-      (npn.C) -- (4,4)
-      (npn.E) -- (4,2)
-     (2,3) to [R=$R_{B2}$] (2,-2) -- (4,-2)
-     to [R=$R_{E1}$] (4,0) -- (6,0)
-      to [C=$C_E$] (6,-2)
-     (1,6) node[anchor=east] {$V_{cc}$} to [short,o-] (2,6)
-     (4,0) to [R=$R_{E2}$] (4,2)
-     ;
-    \end{circuitikz}
-
-   \subsection{Polarisation}
-    En raison de la présence des condensateurs, ce circuit est équivalent à (en continu) :
-
-    \begin{circuitikz} \draw
-     (3,2) to [R=$R_E$] (3,0) -- (0,0)
-      to [battery=$E_{th}$] (0,3)
-      to [R=$R_B$] (2,3)
-     (2,6) node[anchor=east] {$V_{cc}$} to [short,o-] (3,6)
-      to [R=$R_C$] (3,4)
-     (3,3) node[npn](npn){}
-      (npn.B) -- (2,3)
-      (npn.C) -- (3,4)
-      (npn.E) -- (3,2)
-     ;
-    \end{circuitikz}
-
-    On obtient donc les relations suivantes :
-
-    $\left.
-      \begin{array}{c}
-       R_E = R_{E1} + R_{E2} \\
-       R_B = \cfrac{R_{B1} R_{B2}}{R_{B1} + R_{B2}} \\
-       E_{th} = \cfrac{V_{cc}}{1+\cfrac{R_{B1}}{ R_{B2}}} \\
-       R_E I_C + V_{BE} + R_B I_B = E_{th} \\
-       I_C = \beta I_B
-      \end{array}
-    \right\} \Rightarrow I_C = \cfrac{E_{th} - V_{BE}}{R_E + \cfrac{R_B}{\beta}}$
-
-   \subsection{Droite de charge statique}
-    De la même façon que précedemment, on s'efforcera de placer notre point de polarisation au milieu de la droite de charge statique :
-
-    $V_{cc} = R_C I_C + V_{CE} + R_E I_C$
-
-    $I_C = \cfrac{V_{cc} - V_{CE}}{R_E+R_C}$
-
-    \begin{circuitikz}
-     \begin{scope}[xshift=6.5cm, yshift=.5cm]
-      \draw [->] (0,0) -- (4.5,0) node[anchor=west] {$V_{CE} $};
-      \draw [->] (0,0) -- (0,2.5) node[anchor=west] {$I_C$} ;
-      \draw (2,0) node[anchor=north] {$\cfrac{V_{cc}}{2}$}
-            (4,0) node[anchor=north] {$V_{cc}$}
-            (0,1) node[anchor=east] {$\cfrac{V_{cc}}{2(R_E+R_C)}$}
-            (0,2) node[anchor=east] {$\cfrac{V_{cc}}{R_E+R_C}$}
-            (0,0) node[anchor=north] {0};
-      \draw [thick] (0,2) -- (4,0);
-      \draw [dotted] (0,1) -- (2,1) -- (2,0);
-     \end{scope}
-    \end{circuitikz}
-
-
-   \subsection{Schéma équivalent petit signal}
-    Aux fréquences moyennes et en comportement petit signal, on obtient le schéma équivalent suivant :
-
-    \begin{circuitikz} \draw
-     (0,4) to [short,i=$I_E$] (1,4) -- (5,4)
-     to [R=$r_b$,v=v] (5,2) -- (9,2)
-     (9,4) to [cI=$g_mv$] (9,2)
-     (0,4) to [open,v=$V_E$] (0,0) -- (7,0)
-     to [R=$R_{E1}$] (7,2)
-     (1,0) to [R=$R_{B1}$] (1,4)
-     (3,0) to [R=$R_{B2}$] (3,4)
-     (11,4) to [R=$R_C$] (11,0)
-     (9,4) -- (11,4)
-      to [short,-o,i=$I_S$] (13,4)
-      to [open,v=$V_S$] (13,0) -- (7,0)
-     ;
-    \end{circuitikz}
-
-    $g_m = \cfrac{I_C}{U_T}$
-
-    $r_b = \cfrac{\beta}{g_m}$
-
-   \subsection{Droite de charge dynamique}
-
-    $\cfrac{V_{CE}(t)}{I_C(t)} = - R_C \parallel Z_L$
-   
-   \begin{circuitikz}
-    \begin{scope}[xshift=6.5cm, yshift=.5cm]
-     \draw [->] (0,0) -- (4.5,0) node[anchor=west] {$V_{CE}(t) $};
-     \draw [->] (0,0) -- (0,2.5) node[anchor=west] {$I_C(t)$} ;
-     \draw (3,0) node[anchor=north] {$V_{CE_Q}$}
-           (4,0) node[anchor=north] {$V_{CE_{max}}$}
-           (0,0.5) node[anchor=east] {$I_{C_Q}$}
-           (0,2) node[anchor=east] {$I_{C_{max}}$}
-           (0,0) node[anchor=north] {0};
-     \draw [thick] (0,2) -- (4,0);
-     \draw [dotted] (0,0.5) -- (3,0.5) -- (3,0);
-    \end{scope}
-    \end{circuitikz}
-
-    Donc dynamique de sortie maximale (crête à crête) = $2(V_{CEmax}-V_{CEQ}) = 2 I_{CQ} (R_C \parallel Z_L)$ car $V_S = V_{CE}$
-
-   \subsection{Impédance d'entrée}
-
-   $Z_E = \cfrac{V_E}{I_E} = R_B \parallel (r_b + \beta R_{E1})$
-
-   \subsection{Impédance de sortie}
-
-    Pour ce calcul, nous ne pouvons plus négliger $r_2$.
-    On considère alors ce schéma:
-
-    \begin{circuitikz} \draw
-        (0,0) -- (9,0)
-        to [R=$R_g$] (9,2) -- (5,2)
-        to [R=$R_{B1}$] (5,0)
-        (3,0) to [R=$R_{E1}$] (3,4) -- (7,4)
-        to [R=$r_b$,v_>=$v$] (7,2)
-        to [R=$R_{B2}$] (7,0)
-        (1,0) to [R=$R_C$] (1,7) -- (3,7)
-        to [cI=$g_mv$] (3,5) -- (5,5) -- (5,4)
-        (0,7) to [open,v=$V_E$] (0,0)
-        (0,7) to [short,o-,i=$I_E$] (1,7)
-        (3,7) -- (7,7) to [R=$r_2$] (7,5) -- (5,5)
-        ;
-    \end{circuitikz}
-    
-    On effectue ensuite une transformation vers un modèle équivalent de Thévenin:
-    
-    \begin{circuitikz} \draw
-        (0,0) -- (9,0)
-        to [R=$R_g$] (9,2) -- (5,2)
-        to [R=$R_{B1}$] (5,0)
-        (3,0) to [R=$R_{E1}$] (3,4) -- (5,4)
-        to [short,i=$i^\prime$] (7,4)
-        to [R=$r_b$,v_>=$v$] (7,2)
-        to [R=$R_{B2}$] (7,0)
-        (1,0) to [R=$R_C$] (1,6)
-        to [short,i=$i$] (3,6)
-        to [cV=$g_mvr_2$] (5,6)
-        to [R=$r_2$] (5,4)
-        (0,6) to [open,v=$V_E$] (0,0)
-        (0,6) to [short,o-,i=$I_E$] (1,6)
-        %(3,7) -- (7,7) to [R=$r_2$] (7,5) -- (5,5)
-        ;
-    \end{circuitikz}
-    
-    On a donc:
-
-    $Z_S = R_C \parallel \cfrac{V_E}{i}$
-
-    $V_E = -g_mvr_2 + r_2i+i^\prime\left(r_b+R_B\parallel R_g\right)$
-
-    $i^\prime = i\cfrac{R_{E1}}{R_{E1}+r_b+R_B\parallel R_g}$
-
-    Finalement,
-
-    $Z_S = R_C\parallel\left( r_2 + \cfrac{r_b(1-g_mr_2)+R_B\parallel R_g}{R_{E1}+r_b+R_B\parallel R_g} R_{E1}\right)$
-
-   \subsection{Gain}
-
-   $a_v = \cfrac{V_S}{V_E} = \cfrac{-g_mv(Z_L \parallel R_C)}{v} = -g_m\cfrac{Z_L\parallel R_C}{1+\left(g_m + \cfrac{1}{r_b}\right)R_{E1}}$
-
-   \subsection{Comportement en fréquence}
-    «À vue», l’influence de $C_i$ intervient dans la fonction de transfert
-    
-    $H = \cfrac{Z_E}{Z_E+R_g}\cdot\cfrac{(Z_E+R_g)C_ip}{1+(Z_E+R_g)C_ip}$, 
-
-    donc $f_{CBF1} = \cfrac{1}{2\pi(Z_E+R_g)C_i}$
-
-    On étudie l’influence de $C_o$ de la même manière:
-
-    $H = \cfrac{Z_L}{Z_L+Z_S}\cdot\cfrac{(Z_L+Z_S)C_ip}{1+(Z_L+Z_S)C_ip}$, 
-
-    donc $f_{CBF2} = \cfrac{1}{2\pi(Z_L+Z_S)C_i}$
-
-    Il reste à voir l’influence de $C_E$. Pour cela, on considère le bout circuit suivant:
-
-    \begin{circuitikz} \draw
-     (-1,6) -- (1,6)
-     to [R=$r_b$,v=v] (1,4) -- (7,4)
-     (7,6) to [cI=$g_mv$] (7,4)
-     to [open,v=$V_e$] (7,0)
-     (-1,6) to [open,v=$V_E$] (-1,0) -- (3,0)
-     to [R=$R_{E1}$] (3,4)
-     (5,0) to [R=$R_{E2}$] (5,2)
-     to [C=$C_E$] (5,4)
-     (7,6) -- (9,6)
-      to [open,v=$V_S$] (9,0) -- (3,0)
-     ;
-    \end{circuitikz}
-
-    On pose alors $Z = R_{E1}\parallel\left(R_{E2}+\cfrac{1}{C_Ep}\right) = \cfrac{1+R_{E2}C_Ep}{1+(R_{E1}+R_{E2})C_Ep}R_{E1}$
-
-    Ce qui nous permet de calculer 
-    
-    $V_E = V_e+v = v+v\left(\cfrac{1}{r_b}+g_m\right)Z = \left(1+g_m\left(1+\cfrac{1}{\beta}\right)Z\right)v$
-
-    On obtient donc
-
-    $H = \cfrac{1}{1+g_mZ} = \cfrac{1}{1+g_mR_{E1}} = \cfrac{1}{1+g_mR_{E1}}\cdot\cfrac{1+(R_{E1}+R_{E2})C_Ep}{1+\cfrac{R_{E2}C_Ep}{1+g_mR_{E1}}}$
-
-    Cette fonction de transfert entraine une fréquence de coupure basse fréquence de
-
-    $f_{CBF3} = \cfrac{1+g_mR_{E1}}{2\pi R_{E2}C_E}$
-
-  \section{Amplificateur différentiel}
-   \subsection{Schéma}
-
-    \begin{circuitikz} \draw
-     (4,0) -- (0,0) to [battery=12V] (0,4)
-      to [battery=12V] (0,9) -- (8,9)
-     (4,6) node[npn](npn1){}
-      (npn1.B) -- (2,6)
-      (npn1.C) -- (4,7)
-      (npn1.E) -- (4,5)
-     (8,6) node[npn,xscale=-1](npn2){}
-      (npn2.B) -- (10,6)
-      (npn2.C) -- (8,7)
-      (npn2.E) -- (8,5)
-     (6,3) node[npn](npn3){T3}
-      (npn3.B) -- (4,3)
-      (npn3.C) -- (6,5)
-      (npn3.E) -- (6,2)
-     (6,2) to [R=$R_E$] (6,0) -- (4,0)
-      to [R=$R_{B2}$] (4,3) -- (4,4)
-      to [R=$R_{B1}$] (2,4) -- (0,4)
-     (1,6) to [short,i=$I_E$] (2,6)
-      to [R=$R_{BP}$] (2,4) -- (2,3)
-     (2,3) node[ground]{}
-     (4,9) to [R=$R_C$] (4,7)
-     (8,9) to [R=$R_C$] (8,7)
-     (10,6) -- (10,5)
-     (10,3) -- (10,2) node[ground]{}
-     (9,3) to [R=$R_{BP}$] (9,5) -- (11,5)
-      to [C] (11,3) -- (9,3)
-     (4,5) to [R=$R_{EP}$] (6,5) to [R=$R_{EP}$] (8,5)
-     (8,7) -- (10,7) to [short,i=$I_S$] (11,7)
-     %(6,5) node[anchor=south]{A}
-     ;
-    \end{circuitikz}
-
-    Afin de fixer identiquement le courant tans les transistors 1 et 2, on utilisera des résistances $R_{BP}$, $R_{EP}$ et $R_C$ de valeurs identiques.
-
-   \subsection{polarisation de T3}
-    $R_B = R_{B1} \parallel R_{B2}$
-
-    $E_{th} = \cfrac{V_{cc}}{1+\cfrac{R_{B1}}{R_{B2}}} - 12 $
-    
-    $I_{C3} = 2 I_{C1}= \cfrac{E_{th} - V_{BE}}{R_E + \cfrac{R_B}{\beta}}$
- 
-   \subsection{Schéma équivalent petit signal de T3}
-    \begin{circuitikz} \draw
-     (9,4) node[anchor=west]{A}
-     (9,4) to [open,v=$V_S$] (9,0) -- (0,0)
-      to [R=$R_B$] (0,4) -- (2,4)
-      to [R=$r_{b3}$,v=v] (2,2) -- (7,2)
-      to [R=$r_{03}$] (7,4)
-     (9,4) to [short,i=$I_S$] (8,4) -- (4,4)
-      to [cI,i=$g_mv$] (4,2)
-      to [R=$R_E$] (4,0)
-     ;
-    \end{circuitikz}
-
-    Ce transistor sert à fixer le courant dans les deux autres, on le modélise par la suite par une impédance $Z_{S3}$
-
-   \subsection{Schéma équivalent petit signal}
-    \begin{circuitikz} \draw
-     (0,6) to [short,i=$I_E$] (1,6)
-      to [R=$r_{b_1}$, v=v] (1,4) -- (4,4)
-     (4,6) to [cI,i=$g_mv$] (4,4)
-     (4,6) -- (6,6) to [R=$R_{C_1}$] (6,3)
-     (6,3) node[ground]{}
-     (8,3) node[ground]{}
-     (8,3) -- (8,6) -- (9,6)
-      to [R=$r_{b_2}$] (9,4) -- (12,4)
-     (12,6) to [cI,i=$g_mv$] (12,4)
-     (12,6) -- (14,6)
-      to [R=$R_{C_2}$] (14,3)
-     (14,3) node[ground]{}
-     (14,6) to [short, i=$I_S$] (15,6)
-     (2,4) -- (2,2) -- (11,2) -- (11,4)
-     (7,2) to [R=$Z_{S3}$] (7,0)
-     (7,0) node[ground]{}
-     ;
-    \end{circuitikz}
-
-    \begin{circuitikz} \draw
-     (0,6) to [short,i=$I_E$] (1,6)
-      to [R=$r_{b_1}$,v=v] (1,4) -- (8,4)
-     (8,2) to [cI,i=$g_mv$] (8,4)
-     (8,2) to [short,i=$I_S$] (9,2)
-     (9,0) -- (0,0)
-     (2,0) to [R=$R_{C_1}$] (2,2)
-      to [cI,i=$g_mv$] (2,4)
-     (4,0) to [R=$Z_{S3}$] (4,4)
-     (6,4) to [R=$r_{b_2}$,v=v] (6,0)
-     (8,0) to [R=$R_{C_2}$] (8,2)
-     ;
-    \end{circuitikz}
-
-   \subsection{Droite de charge dynamique}
-    $V_{CE} + R_C I_C = 2 I_C ( Z_{S3} \parallel r_b)$
-    
-    $\cfrac{V_{CE}}{I_C} = 2(Z_{S3}\parallel r_b) - R_C$
-
-    \begin{circuitikz}
-    \begin{scope}[xshift=6.5cm, yshift=.5cm]
-     \draw [->] (0,0) -- (4.5,0) node[anchor=west] {$V_{CE}(t) $};
-     \draw [->] (0,0) -- (0,2.5) node[anchor=west] {$I_C(t)$} ;
-     \draw (3,0) node[anchor=north] {$V_{CE_Q}$}
-           (4,0) node[anchor=north] {$V_{CE_{max}}$}
-           (0,0.5) node[anchor=east] {$I_{C_Q}$}
-           (0,2) node[anchor=east] {$I_{C_{max}}$}
-           (0,0) node[anchor=north] {0};
-     \draw [thick] (0,2) -- (4,0);
-     \draw [dotted] (0,0.5) -- (3,0.5) -- (3,0);
-    \end{scope}
-    \end{circuitikz}
-
-    $2(V_{CEmax}-V_{CEQ}) = 2 I_{CQ} (2(Z_{S3} \parallel r_b) -R_C)$ 
-    Donc dynamique de sortie maximale (crête à crête) = $2 I_C (Z_{S3} \parallel r_b) - V_{CE}$
-
-   \subsection{Impédance d'entrée}
-    $Z_E = 2 r_b$
-
-   \subsection{Impédance de sortie}
-    $Z_S = R_C$
-
-   \subsection{Gain}
-    Dans les conditions de notre amplificateur différentiel, on obtient un gain 
-    $a_v = \cfrac{g_m R_C}{2}$
+  \input{2.1}
+  \input{2.2}
+  \input{2.3}
