--- a/mini_projets/electronique_lineaire_15A/rapport.tex
+++ b/mini_projets/electronique_lineaire_15A/rapport.tex
@@ -22,6 +22,7 @@
 \renewcommand{\thechapter}{\Roman{chapter}}
 \renewcommand{\thesection}{\thechapter .\Alph{section}}
 
+\includeonly{2}
 \begin{document}
  \begin{titlepage}
   \maketitle
