fignolage du rapport

--- a/mini_projets/electronique_lineaire_15A/rapport/2.1.tex
+++ b/mini_projets/electronique_lineaire_15A/rapport/2.1.tex
@@ -54,9 +54,7 @@
 
     Afin de limiter les effets de distorsion, on s'efforcera de placer le point de polarisation Q au milieu de la droite de charge statique.
     
-    $V_{cc} = R_C I_C + V_{CE} + R_E I_C$
-
-    $I_C = \cfrac{V_{cc} - V_{CE}}{R_E+R_C}$
+    $V_{cc} = R_C I_C + V_{CE} + R_E I_C \Rightarrow I_C = \cfrac{V_{cc} - V_{CE}}{R_E+R_C}$
 
     \begin{circuitikz}
      \begin{scope}[xshift=6.5cm, yshift=.5cm]
