--- a/mini_projets/electronique_lineaire_15A/rapport/2.2.tex
+++ b/mini_projets/electronique_lineaire_15A/rapport/2.2.tex
@@ -53,9 +53,7 @@
    \subsection{Droite de charge statique}
     De la même façon que précedemment, on s'efforcera de placer notre point de polarisation au milieu de la droite de charge statique :
 
-    $V_{cc} = R_C I_C + V_{CE} + R_E I_C$
-
-    $I_C = \cfrac{V_{cc} - V_{CE}}{R_E+R_C}$
+    $V_{cc} = R_C I_C + V_{CE} + R_E I_C \Rightarrow I_C = \cfrac{V_{cc} - V_{CE}}{R_E+R_C}$
 
     \begin{circuitikz}
      \begin{scope}[xshift=6.5cm, yshift=.5cm]
