--- a/mini_projets/electronique_lineaire_15A/rapport/2.3.tex
+++ b/mini_projets/electronique_lineaire_15A/rapport/2.3.tex
@@ -102,11 +102,11 @@
      (0,6) to [R,l_=$R_{B1}$] (0,0)
      (-1,6) to [short,i=$I_E$] (0,6) -- (1,6)
       to [R=$r_{b_1}$,v=$v_1$] (1,4) -- (8,4)
-     (8,2) to [cI,i=$g_mv_1$] (8,4)
+     (8,2) to [cI,i=$g_mv_2$] (8,4)
      (8,2) to [short,i=$I_S$] (9,2)
      (9,0) -- (-1,0)
      (2,0) to [R=$R_{C_1}$] (2,2)
-      to [cI,i=$g_mv_2$] (2,4)
+      to [cI,i=$g_mv_1$] (2,4)
      (4,0) to [R=$Z_{S3}$] (4,4) node[anchor=south]{A}
      (6,4) to [R=$r_{b_2}$,v_>=$v_2$] (6,0)
      (8,0) to [R=$R_{C_2}$] (8,2)
@@ -114,28 +114,25 @@
     \end{circuitikz}
 
    \subsection{Droite de charge dynamique}
-    TODO
-    %$V_{CE} + R_C I_C = 2 I_C ( Z_{S3} \parallel r_b)$
-    
-    %$\cfrac{V_{CE}}{I_C} = 2(Z_{S3}\parallel r_b) - R_C$
+    $V_{CE} + R_C I_C = 2 I_C ( Z_{S3} \parallel r_b \parallel (r_b+R_{B1}))\Rightarrow\cfrac{V_{CE}}{I_C} = 2(Z_{S3}\parallel r_b \parallel (r_b+R_{B1})) - R_C$
 
-    %\begin{circuitikz}
-    %\begin{scope}[xshift=6.5cm, yshift=.5cm]
-     %\draw [->] (0,0) -- (4.5,0) node[anchor=west] {$V_{CE}(t) $};
-     %\draw [->] (0,0) -- (0,2.5) node[anchor=west] {$I_C(t)$} ;
-     %\draw (3,0) node[anchor=north] {$V_{CE_Q}$}
-           %(4,0) node[anchor=north] {$V_{CE_{max}}$}
-           %(0,0.5) node[anchor=east] {$I_{C_Q}$}
-           %(0,2) node[anchor=east] {$I_{C_{max}}$}
-           %(0,0) node[anchor=north] {0};
-     %\draw [thick] (0,2) -- (4,0);
-     %\draw [dotted] (0,0.5) -- (3,0.5) -- (3,0);
-    %\end{scope}
-    %\end{circuitikz}
+    \begin{circuitikz}
+    \begin{scope}[xshift=6.5cm, yshift=.5cm]
+     \draw [->] (0,0) -- (4.5,0) node[anchor=west] {$V_{CE}(t) $};
+     \draw [->] (0,0) -- (0,2.5) node[anchor=west] {$I_C(t)$} ;
+     \draw (3,0) node[anchor=north] {$V_{CE_Q}$}
+           (4,0) node[anchor=north] {$V_{CE_{max}}$}
+           (0,0.5) node[anchor=east] {$I_{C_Q}$}
+           (0,2) node[anchor=east] {$I_{C_{max}}$}
+           (0,0) node[anchor=north] {0};
+     \draw [thick] (0,2) -- (4,0);
+     \draw [dotted] (0,0.5) -- (3,0.5) -- (3,0);
+    \end{scope}
+    \end{circuitikz}
 
-    %$2(V_{CEmax}-V_{CEQ}) = 2 I_{CQ} (2(Z_{S3} \parallel r_b) -R_C)$ 
+    $2(V_{CEmax}-V_{CEQ}) = 2 I_{CQ} (2(Z_{S3} \parallel r_b\parallel(r_b+R_{B1})) -R_C)$ 
 
-    %Donc dynamique de sortie maximale (crête à crête) = $2 I_C (Z_{S3} \parallel r_b) - V_{CE}$
+    Donc dynamique de sortie maximale (crête à crête) = $2 I_C (Z_{S3} \parallel r_b\parallel(r_b+R_{B1})) $
 
    \subsection{Impédance d'entrée}
     $Z_E = 2 r_b$
