--- a/mini_projets/electronique_lineaire_15A/rapport/rapport.tex
+++ b/mini_projets/electronique_lineaire_15A/rapport/rapport.tex
@@ -14,6 +14,7 @@
 \usepackage{url,hyperref}
 \usepackage{siunitx}
 \usepackage{schemabloc}
+\usepackage{color}
 
 \title{\includegraphics{../../../../images/inp-enseeiht} \\ ~ \\ ~ \\ ~ \\ ~ \\ Mini Projet Électronique Linéaire \\ ~ \\ \large{Réalisation d'un amplificateur de tension}}
 \author{Mathieu Couffinhal, Guilhem Saurel}
@@ -22,12 +23,11 @@
 \renewcommand{\thechapter}{\Roman{chapter}}
 \renewcommand{\thesection}{\thechapter .\Alph{section}}
 
-\includeonly{2}
+%\includeonly{2}
 \begin{document}
  \begin{titlepage}
   \maketitle
  \end{titlepage}
-
 
  %\hspace{30mm}
  \tableofcontents
