--- a/mini_projets/electronique_lineaire_15A/rapport/6.tex
+++ b/mini_projets/electronique_lineaire_15A/rapport/6.tex
@@ -4,20 +4,20 @@
      \hline
      & & Typique & Tolérance & Minimum & Maximum  & Obtenu\\
      \hline
-     \multirow{4}{3cm}{Caractéristiques générales à 30k\hertz} & Gain en tension & 60 & $\pm$ 5dB & 55 & 65 & \\
-     \cline{2-7} & Résistance d'entrée & 30 & $\pm$ 15 \% & 25.5 & 34.5 & \\
-     \cline{2-7} & Résistance de sortie & 100 & $\pm$ 15 \% & 85 & 115 & \\
-     \cline{2-7} & Dynamique de sortie (5\kilo\ohm)& & & 6 & & \\
-     \cline{2-7} & Dynamique de sortie (100\ohm)& & & 0.1 & & \\
+     \multirow{4}{3cm}{Caractéristiques générales à 30k\hertz} & Gain en tension & 60 & $\pm$ 5dB & 55 & 65 & 55,56\\
+     \cline{2-7} & Résistance d'entrée & 30 & $\pm$ 15 \% & 25,5 & 34,5 & \textcolor{green}{32}\\
+     \cline{2-7} & Résistance de sortie & 100 & $\pm$ 15 \% & 85 & 115 & 85\\
+     \cline{2-7} & Dyn. de sortie (5\kilo\ohm)& & & 6 & & 6,09\\
+     \cline{2-7} & Dyn. de sortie (100\ohm)& & & 0,1 & & \textcolor{green}{2,02}\\
      \hline
-     \multirow{2}{3cm}{Fréquence de coupure} & basse & 100 & $\pm$ 20 \% & 80 & 120 &\\
-     \cline{2-7} & haute & & & 500 & & \\
+     \multirow{2}{3cm}{Fréquence de coupure} & basse & 100 & $\pm$ 20 \% & 80 & 120 & \textcolor{green}{115}\\
+     \cline{2-7} & haute & & & 500 & & \textcolor{red}{363}\\
      \hline
-     Distorsion harmonique & [1k\hertz;100k\hertz] & & & & 5,00 \% & \\
+     Distorsion harmonique & [1k\hertz;100k\hertz] & & & & 5,00 \% & 4,5\\
      \hline
-     \multirow{2}*{Tension d'alimentation} & Positive & 12V & & 0 & 12 & \\
-     \cline{2-7} & Négative & -12V & & -12 & 0 & \\
+     \multirow{2}*{Tension d'alimentation} & Positive & 12V & & 0 & 12 & 12\\
+     \cline{2-7} & Négative & -12V & & -12 & 0 & -12\\
      \hline
-     Courant de collecteur & & & & 0.1 & 10 & \\
+     Courant de collecteur & & & & 0,1 & 10 & \textcolor{green}{0,11 à 5,9}\\
      \hline
     \end{tabular}
