--- a/mini_projets/electronique_lineaire_15A/rapport/5.tex
+++ b/mini_projets/electronique_lineaire_15A/rapport/5.tex
@@ -28,7 +28,7 @@
     \includegraphics[width=17cm]{images/bode}
 
   \section{Respect du cahier des charges}
-   Voici les caractéristiques principales de noter amplificateur, telles que données par
+   Voici les caractéristiques principales de notre amplificateur, telles que données par
    Spice, qui complètent les données de polarisation présentes sur les schémas:
 
    \subsection{Fréquences de coupure}
